8308858: FFM API and strings
Reviewed-by: jvernee